--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>1</td>
+                    <td class="free">1</td>
                     <td>2</td>
                     <td>3</td>
                     <td>4</td>
