--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Alojamiento.</h2>
-          <p class="lead">Con capacidad para 8 personas, La Morada dispone de 4 habitaciones dobles, 3 con cama de matrimonio de 150cm y 1 con camas individuales de 90cm. Todas las habitaciones cuentan con calefacción individual, así como toda la ropa de cama correspondiente. Además, cada una de ellas está equipada con armario y mesitas.</p>
-          <p class="lead">En la planta inferior está situado el salón-comedor con chimenea de leña y un gran sofá; la cocina, completamente equipada (nevera, microondas, vitrocerámica y todo el menaje necesario; un baño con WC y lavabo; el patio con barbacoa, sillas y mesa.</p>
-          <p class="lead">En la planta superior se encuentran todas las habitaciones, así como un par de baños que cuentan con ducha, WC y lavabo.</p>
+          <p class="lead">Antigüa casa de piedra con más de 100 años de historia. Totalmente rehabilitada, que combina materiales originales, tradicionales y reciclados. Siendo respetuosa y en total armonía con la arquitectura tradicional del entorno. Ubicada en Torraño (San Esteban de Gormaz), un pequeño pueblo de encanto tipicamente soriano.</p>
+          <p class="lead">La madera en vigas, techos y muebles artesanos, le dan un ambiente rústico y acogedor. Cuenta con una capacidad de 8 a 10 personas, en alquiler completo. Equipada con todo lo necesario para que la estancia sea "como estar en casa".</p>
+          <p class="lead">La planta baja dispone de todas las zonas comunes, salón-comedor con chimenea; amplia cocina con zona para comer; baño completo con ducha; zona de lavandería (lavadora, secadora y tendedero) y un acogedor patio donde disfrutar de la barbacoa.</p>
+          <p class="lead">En la planta superior se encuentran  cuatro confortables habitaciones dobles(dos con cama de matrimonio de 1,50cm, una con cama de 1,30cm y una con dos camas de 0,90cm) con posibilidad de cama supletoria y/o cuna de viaje. Dispone de dos cuartos de baño con ducha..</p>
+          <p class="lead">La vivienda está dotada con agua corriente potable y calefacción. Se admiten animales. (Ver apartado "Mascotas".)</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="./img/casa.jpg">
