--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <p class="lead">- Los propietarios se harán responsables en todo momento de sus animales.</p>
           <p class="lead">- Por razones de higiene, rogamos eviten que las mascotas se suban al mobiliario. Se procurará que los animales no duerman ni entren en las habitaciones.</p>
           <p class="lead">- Recomendamos que traigan una manta o colchoneta para el suelo; en la casa podemos proporcionarles sólo una. Por favor respentes las alfombras.</p>
-          <p class="lead">- Si necesitan una toalla para el aseo de su animal, pídanosl. No usen las toallas del baño.</p>
+          <p class="lead">- Si necesitan una toalla para el aseo de su animal, pídanosla. No usen las toallas del baño.</p>
           <p class="lead">- Siempre se dará de comer y de beber a los animales en los baños o en el patio. Si no han traído recipientes para ellos, también podemos proprcionárselos.</p>
           <p class="lead">- Rogamos que no dejen solas a sus mascotas en la casa cuando se ausenten.</p>
           <p class="lead">- Recuerde que su mascota es un ser vivo, que debe ser tratado con el cariño, el respeto y la dignidad que merece.</p>
@@ -966,16 +966,7 @@
                     <td></td>
                     <td></td>
                   </tr>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                </table>
+                  </table>
               </div>
             </div>
             <div class="col-md-1">
@@ -1143,6 +1134,7 @@
         <div class="col-md-4">
           <h2 class="featurette-heading">Cómo llegar.</h2>
           <p class="lead">Calle Escuela, 30. Torraño, Soria, Castilla y León.</p>
+          <p class="lead">Ctrra N110. Salida 93.</p>
           <p>
           	<div id="cont_3c2d290a75cbc70213a218ace079680d">
               <span id="h_3c2d290a75cbc70213a218ace079680d"><a id="a_3c2d290a75cbc70213a218ace079680d" href="http://www.tiempo.com/torrano_soria-l89282.htm" target="_blank" rel="nofollow" style="color:#808080;font-family:Helvetica;font-size:14px;">El Tiempo en Torra&ntilde;o</a></span>
