--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@ y un Puente romano.</p>
           <h2 class="featurette-heading">Otros lugares de interés:</h2>
           <p class="lead">El Sito Paleontológico, Cerro Pelado, en Medinaceli. Medinaceli. Casillas de Berlanga. Muriel de la Fuente. Almazán. La Fuentona. La Laguna Negra. El Espacio Natural de Sierra de Urbión. Y la Propia Soria.</p>
           </div>
+          </div>
           
       <hr class="featurette-divider" id="Precios">
 
