añadir aviso legal, borrado de información duplicada y cambios varios

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <li><a href="#Precios">Disponibilidad y precios</a></li>
                 <li><a href="#Llegar">Cómo llegar</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
+                <li><a href="#Contacto">Aviso legal</a></li>
               </ul>
             </div>
           </div>
@@ -80,7 +81,7 @@
           <img src="./img/Fachada dia (3).jpg">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Desconectate.</h1>
+              <h1>Regálate un descanso.</h1>
               <p>Un sitio ideal para desconectar de la rutina con todas las comodidades.</p>
               <p><a class="btn btn-lg btn-success" href="#Galeria" role="button">Ver galería</a></p>
             </div>
@@ -360,7 +361,6 @@ y un Puente romano.</p>
           <div class="col-md-12">
           <p class="lead">Desde el año 2000 se celebra cada tercer fin de semana del mes de agosto el Mercado Medieval. Un acontecimiento que tiene el éxito asegurado gracias a la estrecha participación de todos sus vecinos.</p>
           <p class="lead">La localidad está situada en la Ruta de la Lana y en el Camino del Cid, ruta del destierro de El Cid, en la orilla del Río Duero.</p>
-          <p class="lead">Es el inicio de "La ruta del Vino", que comienza en esta localidad y recorre seis localidades en sus 33 km de itinerario. La ruta se caracteriza por recorrer poblaciones con un gran número de bodegas y lagares (Soto de San Esteban, Aldea de San Esteban, Peñalba de San Esteban, Piquera de San Esteban y Atauta).</p>
           </div>
           
           <div class="col-md-8">
@@ -1420,7 +1420,7 @@ y un Puente romano.</p>
 
       <div class="row featurette">
         <!--contacto-->
-        <div class="col-md-4">
+        <div class="col-md-12">
           <h2 class="featurette-heading">Contacto.</h2>
           <div class="bs-example" data-example-id="hoverable-table">
             <table class="table table-hover">
@@ -1437,12 +1437,42 @@ y un Puente romano.</p>
                   <th scope="row">Teléfono</th>
                   <td>+34 677 45 07 29</td>
                 </tr>
-
-              </tbody>
+				</div>
+                </tbody>
             </table>
            </div>
+			<hr class="featurette-divider" id="Aviso legal">
 
-          <!--calendario-->
+      <div class="row featurette">
+        <div class="col-md-12">
+          <h2 class="featurette-heading">Aviso legal.</h2>
+          <table class="table table-hover">
+          <p class="lead">Datos relativos a la autorización administrativa previa para el ejercicio de la actividad.<p>
+<p class="lead">Establecimiento autorizado por el Consejería de Turismo de la Junta de Castilla y León con Nº oficial 42/000450.<p>
+
+<p class="lead">Este sitio web ha sido creado por Casa Rural LA MORADA DE SORIA con carácter informativo y para uso personal de los usuarios. A través de este Aviso legal, se pretende regular el acceso y uso de este sitio web, así como la relación entre el sitio web y sus usuarios. Accediendo a este sitio web se aceptan los siguientes términos y condiciones:<p> 
+
+<p class="lead">El acceso a este sitio web es responsabilidad exclusiva de los usuarios.<p>
+
+<p class="lead">El simple acceso a este sitio web no supone entablar ningún tipo de relación comercial entre LA MORADA DE SORIA CASA RURAL y el usuario.<p>
+
+<p class="lead">El acceso y la navegación en este sitio web supone aceptar y conocer las advertencias legales, condiciones y términos de uso contenidas en ella.<p>
+
+<p class="lead">El titular del sitio web puede ofrecer servicios o productos que podrán encontrarse sometidos a unas condiciones particulares propias que, según los casos, sustituyan, completen y/o modifiquen las presentes condiciones, y sobre las cuales se informará al usuario en cada caso concreto. <p>
+
+<p class="lead">Política de Protección de Datos
+<p class="lead">LA MORADA DE SORIA, con dirección de correo electrónico de contacto lamoradadesoria@gmail.com, informa a sus usuarios y clientes (en adelante, los "Usuarios" y/o "Clientes") acerca de su política de protección de datos de carácter personal (en adelante, "Datos Personales").<p>
+
+<p class="lead">Los Usuarios deciden libre y voluntariamente si desean facilitar a LA MORADA DE SORIA CASA RURAL los Datos Personales que se les pueda solicitar con ocasión de sus relaciones comerciales.<p>
+<p class="lead">Los Clientes falicitarán sus datos personales a LA MORADA DE SORIA CASA RURAL a efectos administativos (facturación) y en cumplimiento de la Normativa marcada por Ministerio de Interior, en materia de notificación de datos personales. Dichos Datos Personales se incorporarán a un fichero denominado "Clientes/Proveedores" declarado ante la Agencia Española de Protección de Datos, del que es responsable LA MORADA DE SORIA DE SORIA. La finalidad es la de llevar a cabo la gestión administrativa con sus Clientes y en cumplimiento de la Normativa del Ministerio del Interior, y no pueden ser usados para enviar comunicaciones comerciales e información de eventos o campañas de promoción a sus clientes.
+Los datos no serán cedidos a terceras empresas, sólamente a la Dirección General de la Guardia Civil, dependiente del Ministerio del Interior.<p>
+
+<p class="lead">LA MORADA DE SORIA CASA RURAL ha adoptado los niveles de seguridad de protección de los Datos Personales legalmente requeridos, y dichos niveles estarán acordes con la evolución del estado de la técnica y la legislación vigente.<p>
+<p class="lead">LA MORADA DE SORIA CASA RURAL pone a disposición de los Usuarios de forma clara, el contenido de este aviso sobre la Política de Privacidad y puedan prestar su consentimiento a fin de que pueda conocer las inquietudes de sus Clientes y, con su colaboración, obtener mejoras en los servicios que presta.<p>
+<p class="lead">Los Usuarios y Clientes tienen reconocidos y podrán ejercitar los derechos de acceso, cancelación, rectificación y oposición, contactando con LA MORADA DE SORIA a través del correo electrónico lamoradadesoria@gmail.com.</p>
+          </div>
+      </div>
+          
 
         </div>
 
