--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
                 <img class="img-responsive" src="./img/salon3.jpg"/>
               </li>
               <li class="col-lg-2 col-md-2 col-sm3 col-xs-4">
+                <img class="img-responsive" src="./img/patio3.jpg"/>
+              </li>
+              <li class="col-lg-2 col-md-2 col-sm3 col-xs-4">
+                <img class="img-responsive" src="./img/patio1.jpg"/>
+              </li>
+              <li class="col-lg-2 col-md-2 col-sm3 col-xs-4">
                 <img class="img-responsive" src="./img/Cocina dia (2).JPG"/>
               </li>
               <li class="col-lg-2 col-md-2 col-sm3 col-xs-4">
@@ -1189,18 +1195,18 @@ y un Puente romano.</p>
                     <td>6</td>
                     <td>7</td>
                     <td>8</td>
-                    <td>9</td>
-                    <td>10</td>
-                    <td>11</td>
+                    <td class="ocuppied">9</td>
+                    <td class="ocuppied">10</td>
+                    <td class="ocuppied">11</td>
                   </tr>
                   <tr>
-                    <td>12</td>
+                    <td class="ocuppied">12</td>
                     <td>13</td>
                     <td>14</td>
                     <td>15</td>
-                    <td>16</td>
-                    <td>17</td>
-                    <td>18</td>
+                    <td class="ocuppied">16</td>
+                    <td class="ocuppied">17</td>
+                    <td class="ocuppied">18</td>
                   </tr>
                   <tr>
                     <td>19</td>
