--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8">
@@ -141,7 +141,7 @@
           <p class="lead">La vivienda está dotada con agua corriente potable y calefacción. Se admiten animales.(Ver "<a href="#Mascotas">Mascotas</a>").</p>
         </div>
         <div class="col-md-4">
-          <img class="featurette-image img-responsive" src="./img/Fachada noche (1).jpg">
+          <img class="featurette-image img-responsive" src="./img/_MG_6064.JPG">
         </div>
         <div class="col-md-4">
           <img class="featurette-image img-responsive" src="./img/Salon dia (6).JPG">
