--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <p class="lead">La vivienda está dotada con agua corriente potable y calefacción. Se admiten animales.(Ver "<a href="#Mascotas">Mascotas</a>").</p>
         </div>
         <div class="col-md-4">
-          <img class="featurette-image img-responsive" src="./img/_MG_6064.JPG">
+          <img class="featurette-image img-responsive" src="./img/Fachada noche (1).jpg">
         </div>
         <div class="col-md-4">
           <img class="featurette-image img-responsive" src="./img/Salon dia (6).JPG">
