--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ y un Puente romano.</p>
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2 class="featurette-heading">Disponibilidad y precios.</h2>
+          <h2 class="featurette-heading">Precios.</h2>
           <div class="bs-example" data-example-id="hoverable-table">
             <table class="table table-hover">
               <thead>
