--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li><a href="#Galeria">Galería</a></li>
                 <li><a href="#Mascotas">Mascotas</a></li>
                 <li><a href="#Turismo">Torraño y su entorno</a></li>
-                <li><a href="#Precios">Disponibilidad y precios</a></li>
+                <li><a href="#Precios">Precios</a></li>
                 <li><a href="#Llegar">Cómo llegar</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#Contacto">Aviso legal</a></li>
