--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a href="#Llegar">Cómo llegar</a></li>
                 <li><a href="#Contacto">Contacto</a></li>
                 <li><a href="#Contacto">Aviso legal</a></li>
+                <li><a href="#Contacto">COVID-19</a></li>
               </ul>
             </div>
           </div>
@@ -560,7 +561,37 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
 <p class="lead">Los Usuarios tienen reconocidos y podrán ejercitar los derechos de acceso, cancelación, rectificación y oposición, contactando con LA MORADA DE SORIA a través del correo electrónico lamoradadesoria@gmail.com.</p>
           </div>
       </div>
-          
+ 
+			<hr class="featurette-divider" id="COVID-19">
+
+      <div class="row featurette">
+        <div class="col-md-12">
+          <h2 class="featurette-heading">COVID-19</h2>
+          <table class="table table-hover">
+          <p class="lead">Protocolo de actuación frente al COVID-19.<p>
+<p class="lead">Protocolo de limpieza previa y posterior a la salida del viajero:<p>
+
+<p class="lead">Se airear bien las estancias.<p> 
+
+<p class="lead">Se realiza una limpieza y desinfección de toda la casa, prestando especial atención a las superficies de contacto frecuentes.<p>
+
+<p class="lead">Se utilizan desinfectantes con actividad virucida autorizados y registrados por el Ministerio de Sanidad y se realizan estas tareas con EPIs que se desechan a continuación.<p>
+
+<p class="lead">La ropa de cama y de baño se lava y desinfecta en máquina lavadora a una temperatura de 60º centígrados.<p>
+
+
+<p class="lead">Protocolo con los viajeros.<p>
+<p class="lead">Se realizará una desinfección de las manos después de intercambiar objetos con los viajeros como por ejemplo, llaves o dinero.<p>
+.
+<p class="lead">Recomendaciones.<p>
+<p class="lead">Lavarse las manos frecuentemente y durante 40-60 segundos, usando jabón.<p>
+
+<p class="lead">Mantener una distancia social de al menos 2 metros.<p>
+<p class="lead">Al toser o estornudar, cubrirse la boca y la nariz con un pañuelo de papel o la parte interior del codo.<p>
+<p class="lead">Evitar tocarse los ojos, la nariz y la boca.<p>
+<p class="lead">En caso de experimentar síntomas de enfermedad (tos, sensación de falta de aire, etc) se debe llamar a los servicios sanitarios y atender a sus instrucciones. Mientras tanto, extremar las medidas de higiene, mantener la distancia social con otras personas, usar mascarilla. E INFORMAR AL PROPIETARIO DEL ALOJAMIENTO PARA QUE ESTE PUEDA TOMAR LAS MEDIAS OPORTUNAS</p>
+          </div>
+      </div>         
 
         </div>
 
