--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ y un Puente romano.</p>
               <tbody>
                 <tr>
                   <th scope="row">Email</th>
-                  <td><a href="mailto:Lamoradadesoria@gmail.com">Lamoradadesoria@gmail.com</a></td>
+                  <td><a href="mailto:lamoradadesoria@gmail.com">lamoradadesoria@gmail.com</a></td>
                 </tr>
                 <tr>
                   <th scope="row">Teléfono</th>
@@ -535,6 +535,7 @@ y un Puente romano.</p>
       <div class="row featurette">
         <div class="col-md-12">
           <h2 class="featurette-heading">Aviso legal.</h2>
+	  <div class="bs-example" data-example-id="hoverable-table">
           <table class="table table-hover">
           <p class="lead">Datos relativos a la autorización administrativa previa para el ejercicio de la actividad.<p>
 <p class="lead">Establecimiento autorizado por el Consejería de Turismo de la Junta de Castilla y León con Nº oficial 42/000450.<p>
@@ -566,7 +567,8 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
 
       <div class="row featurette">
         <div class="col-md-12">
-          <h2 class="featurette-heading">COVID-19</h2>
+          <h2 class="featurette-heading">COVID-19.</h2>
+          <div class="bs-example" data-example-id="hoverable-table">
           <table class="table table-hover">
           <p class="lead">Protocolo de actuación frente al COVID-19.<p>
 <p class="lead">Protocolo de limpieza previa y posterior a la salida del viajero:<p>
