--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
 			<hr class="featurette-divider" id="COVID-19">
 
       <div class="row featurette">
-        <div class="col-md-12">
+        <div class="col-md-8">
           <h2 class="featurette-heading">COVID-19.</h2>
           <p class="lead">Protocolo de actuación frente al COVID-19.<p>
 <p class="lead">Protocolo de limpieza previa y posterior a la salida del viajero:<p>
@@ -577,6 +577,10 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
 
 <p class="lead">La ropa de cama y de baño se lava y desinfecta en máquina lavadora a una temperatura de 60º centígrados.<p>
 
+        </div>
+        <div class="col-md-4">
+          <img class="featurette-image img-responsive" src="./img/sello final.jpg">
+        </div>
 
 <p class="lead">Protocolo con los viajeros.<p>
 <p class="lead">Se realizará una desinfección de las manos después de intercambiar objetos con los viajeros como por ejemplo, llaves o dinero.<p>
