--- a/index.html
+++ b/index.html
@@ -579,12 +579,12 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
 
         </div>
         <div class="col-md-4">
-          <img class="featurette-image img-responsive" src="./img/sello final.jpg">
+          <img class="featurette-image img-responsive" src="./img/sello final 2.jpg">
         </div>
 
 <p class="lead">Protocolo con los viajeros.<p>
 <p class="lead">Se realizará una desinfección de las manos después de intercambiar objetos con los viajeros como por ejemplo, llaves o dinero.<p>
-.
+
 <p class="lead">Recomendaciones.<p>
 <p class="lead">Lavarse las manos frecuentemente y durante 40-60 segundos, usando jabón.<p>
 
