--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
         <div class="col-md-4">
           <img class="featurette-image img-responsive" src="./img/sello final 2.jpg">
         </div>
-
+	<div class="col-md-12">
 <p class="lead">Protocolo con los viajeros.<p>
 <p class="lead">Se realizará una desinfección de las manos después de intercambiar objetos con los viajeros como por ejemplo, llaves o dinero.<p>
 
