--- a/index.html
+++ b/index.html
@@ -568,13 +568,9 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
           <h2 class="featurette-heading">COVID-19.</h2>
           <p class="lead">Protocolo de actuación frente al COVID-19.<p>
 <p class="lead">Protocolo de limpieza previa y posterior a la salida del viajero:<p>
-
 <p class="lead">Se airear bien las estancias.<p> 
-
 <p class="lead">Se realiza una limpieza y desinfección de toda la casa, prestando especial atención a las superficies de contacto frecuentes.<p>
-
 <p class="lead">Se utilizan desinfectantes con actividad virucida autorizados y registrados por el Ministerio de Sanidad y se realizan estas tareas con EPIs que se desechan a continuación.<p>
-
 <p class="lead">La ropa de cama y de baño se lava y desinfecta en máquina lavadora a una temperatura de 60º centígrados.<p>
 
         </div>
@@ -583,8 +579,9 @@ Los datos no serán cedidos a terceras empresas, sólamente a la Dirección Gene
         </div>
 	</div>
 	<div class="col-md-12">
+
 <p class="lead">Protocolo con los viajeros.<p>
-<p class="lead">Se realizará una desinfección de las manos después de intercambiar objetos con los viajeros como por ejemplo, llaves o dinero.<p>
+<p class="lead">Se realizará una desinfección de las manos después de intercambiar objetos con los viajeros como por ejemplo llaves o dinero.<p>
 
 <p class="lead">Recomendaciones.<p>
 <p class="lead">Lavarse las manos frecuentemente y durante 40-60 segundos, usando jabón.<p>
