--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Casa rural La Morada, Torraño, Soria.">
+    <meta http-equiv="refresh" name="description" content="Casa rural La Morada, Torraño, Soria.">
     <link rel="icon" href="./img/logo.jpg">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
